# ic-sqlite-react-demo

./: AGENTS.md  README.md  dfx.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-check.yml
scripts/: build-backend.sh
src/backend/: Cargo.toml  backend.did  build.rs
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/migrations/: 000_initial.sql  001_persons_seed.sql
src/backend/src/: lib.rs
src/backend/src/person/: mod.rs  person_manager.rs  person_types.rs
src/backend/src/person/controller/: mod.rs  person_count.rs  person_create.rs  person_delete.rs  person_get.rs  person_query.rs  person_update.rs
src/backend/src/seeds/: mod.rs  seed_001_persons.rs
src/frontend/: backend.ts  index.css  routeTree.gen.ts
src/frontend/components/: persons.tsx
src/frontend/declarations/: backend.did.d.ts  backend.did.js
src/frontend/hooks/: use-backend.tsx  use-create-person.tsx  use-delete-person.tsx  use-query-persons.tsx  use-update-person.tsx
src/frontend/routes/: __root.tsx  add-person.tsx  index.tsx
