[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.7"
ic-rusqlite = { version = "0.4.3", features = [
  "precompiled",
], default-features = false }
ic-sql-migrate = { version = "0.0.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ic-sql-migrate = { version = "0.0.4" }
